fix visibility issues

--- a/app/app.css
+++ b/app/app.css
@@ -418,9 +418,10 @@ a.project:hover { background: rgba(255,255,255,.15);}
 #layers .data-y,
 #layers .data-n { display:none; }
 
-#data:target ~ #layers { display:block; }
-#data:target ~ #layers a.delete { display:block; }
-#data:target ~ #layers .sourcetype { display:none; }
+#data:target ~ * #layers.pane > *,
+#data:target ~ * #layers { display:block; }
+#data:target ~ * #layers a.delete { display:block; }
+#data:target ~ * #layers .sourcetype { display:none; }
 
 #layers * { border-color: rgba(0,0,0,.2); }
 #layers .field-key {
